# network_traffic_analysis

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  app.py  docker-compose.yml  install.sh  requirements.txt
attacker/: Dockerfile  entrypoint.sh
config/: alert_config.json  config.yml
data/: detection_results.csv  processed_data.csv  raw_data.csv  train.csv
data/processed/: csecic2018_small.csv
ids/: Dockerfile  entrypoint.sh
ids_iforest_package/: pyproject.toml
ids_iforest_package/ids_iforest/: __init__.py  capture.py  detect.py  logging_utils.py  pcap2flows.py  server.py  train.py  utils.py
ids_iforest_package/ids_iforest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ids_iforest_package/ids_iforest/scripts/: __init__.py  generate_datasets.py  prepare_csecic2018.py
ids_iforest_package/tests/: conftest.py  test_detect.py
logs/: alerts.csv
models/: anomaly_detector.pkl  features.txt  ids_iforest_f05ed42f.joblib  ids_iforest_fa45d1e9.joblib  ids_iforest_latest.joblib  model_card_77df2ac9.json  model_card_dc19180c.json  model_card_fa45d1e9.json  model_card_unknown.json  scaler.pkl  thresholds.json  train_model.py  trained_model.pkl
monitoring/grafana/provisioning/dashboards/: ids.yml
monitoring/grafana/provisioning/datasources/: loki.yml
monitoring/loki/: loki-config.yml
monitoring/promtail/: promtail-config.yml
services/attacker/: Dockerfile  entrypoint.sh
services/ids/: Dockerfile  entrypoint.sh
services/monitoring/grafana/dashboards/: mini-ids.json
services/monitoring/loki/: loki-config.yml
services/monitoring/promtail/: promtail-config.yml
src/: capture.py  detect.py  detect_realtime.py  monitor.py  preprocess.py  train_model.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train.py
tests/: test_capture.py  test_dataset.py  test_features.py  test_preprocess.py  test_train_smoke.py  test_training_and_detection.py
web/: Dockerfile  index.html
